src/components/Navbar/Navbar.css
/* General navigation styles */
.navigation {
  position: relative;
  display: flex;
  align-items: center;
  height: 60px; /* needs adjusting, if you change this change .navigation-menu ul margin top as well */
  width: 100%;
  padding: 0.5rem 0rem;
  background-color: #D9D9D9;
  color: black;
  box-shadow: 0 2px 2px 2px rgba(9, 9, 9, 0.23);
}

.navigation-container {
  max-width: 90%;
  margin-right: auto;
  margin-left: auto;
  padding: 1rem;
}

/* Name of website/brand name styles */
.brand-name {
  text-decoration: none;
  color: #502929;
  font-size: 1.3rem;
  margin-left: 1rem;
}

/* Navigation Menu Styles */
.navigation-menu {
  margin-left: auto;
  align-items: center;
}

.navigation-menu ul {
  display: flex;
  padding: 20px;
  margin-top: 15px; /* have to adjust this to get items in the middle */
  align-items: center;
}

.navigation-menu li {
  list-style-type: none;
  margin: 0 1rem;
}

.navigation-menu li a {
  text-decoration: none;
  display: block;
  width: 100%;
}

/* Hamburger Menu Styles */
.hamburger {
  border: 0;
  height: 40px;
  width: 40px;
  padding: 0.5rem;
  border-radius: 50%;
  background-color: #12215e;
  cursor: pointer;
  transition: background-color 0.2s ease-in-out;
  position: absolute;
  top: 50%;
  right: 25px;
  transform: translateY(-50%);
  display: none;
}

.hamburger:hover {
  background-color: #030b2c;
}

/* Button Styles */
.sign-up-button {
  color: back;
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid black;
  cursor: pointer;
  font-family: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #F29696;
}

.sign-up-button:hover {
  background-color: #315A63;
  border-color: black;
  color: white;
}

.log-in-button {
  color: black;
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid black;
  cursor: pointer;
  font-family: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #F29696;
}

.log-in-button:hover {
  background-color: #315A63;
  border-color: black;
  color: white;
}

/* Media Queries for Navigation Menu */
@media screen and (max-width: 550px) {
  .hamburger {
    display: block;
  }

  .navigation-menu ul {
    flex-direction: column;
    position: absolute;
    top: 60px;
    left: 0;
    width: 100%;
    height: calc(100vh - 60px);
    background-color: white;
    border-top: 1px solid black;
    display: none;
  }

  .navigation-menu li {
    text-align: center;
    margin: 0;
  }

  .navigation-menu li a {
    color: black;
    width: 100%;
    padding: 1.5rem 0;
  }

  .navigation-menu li:hover {
    background-color: #eee;
  }

  .navigation-menu.expanded ul {
    display: block;
  }
}

